--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,5 +165,12 @@
     </string>
     <string name="finish">Finish</string>
     <string name="todo">TODO</string>
-    <string name="addTags">Add tags...</string>
+    <string name="addTags">Add tags…</string>
+    <string-array name="trending_ranges">
+        <item>Past Week</item>
+        <item>Past Month</item>
+        <item>Past Year</item>
+        <item>All Time</item>
+    </string-array>
+
 </resources>
